# cpp_remote_backup

./: .gitignore  Dockerfile  README.md  client.Dockerfile  client.docker-compose.yml  docker-compose.yml  server.Dockerfile  server.docker-compose.yml
_OLD/: Dockerfile  README.md
_OLD/remote_backup_client/my_sync_folder/: test2.txt  test5.txt
_OLD/remote_backup_client/src/: CMakeCache.txt  CMakeLists.txt  Makefile  client.h  cmake_install.cmake  remote_backup_client.cbp
_OLD/remote_backup_server/src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
_OLD/remote_backup_server/test/: main.cpp
_builder_image/: Dockerfile
client/: CMakeLists.txt  client.cpp  client.h  file_watcher.cpp  file_watcher.h  main.cpp  node.cpp  node.h  request.h
redis/: docker-compose.yml
remote_backup_client/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  file_watcher.h  main.cpp
remote_backup_client/src/: CMakeLists.txt  file_watcher.h  hasher.h  main.cpp  node.h
remote_backup_server/: CMakeLists.txt  Dockerfile  docker-compose.yml
remote_backup_server/src/: CMakeLists.txt  main.cpp  remote_backup_server
remote_backup_server/test/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  db.cpp  db.h  main.cpp  server.cpp  server.h  session.cpp  session.h
server/redis/: docker-compose.yml  redis.conf
server/redis/redis_data/: appendonly.aof  dump.rdb
shared/: const.h  duration_logger.h  hasher.h  job.h  shared_box.h  shared_map.h  to_time_t.h
